Update 1. Predator model experiments - behaviour.md

--- a/1. Predator model experiments - behaviour.md
+++ b/1. Predator model experiments - behaviour.md
@@ -4,7 +4,9 @@ Here we analyse the behavioural responses (all but vocal responses) of sooty man
 ### Main findings
 #### Fleeing behaviours
 Leopard = elicits long flees (~8s) 100% of the time, direction is always up and in almost most cases (8/9) individual ends up more than 3m from the ground.
+
 Viper = elicits startle behaviours, i.e., short flees (<2s), 90% of the time, either on the ground (5/9 trials) or upwards (4/9 trials) but never more than 3m from the ground. 
+
 Eagle = elicits mixed fleeing behaviours. Individuals flee during approx. 3-4s half of the time (5/8 trials), in all possible directions (up, down/straight). 
 
 #### Other behaviours
@@ -331,3 +333,37 @@ dm_b2 %>%
 | Leopard   | 1 (1)              | 8 (8)        |
 | Viper     | 4 (4)              | 0 (0)        |
 ```
+
+#### Table. Sequence of behaviours per trial 
+| exp_id | behaviour_sequence                                | sex | ageclass | context_experiment |
+|--------|---------------------------------------------------|-----|----------|---------------------|
+| EXP10  | Tail_Approach model_Tail_Go up_Tail_Go down      | m   | adult    | eagle               |
+| EXP14  | Flee up_Tail_Yawn_Go down                        | m   | subadult | eagle               |
+| EXP19  | Bipedal_Flee up                                  | m   | adult    | eagle               |
+| EXP26  | Flee down_Tail_Yawn_Yawn                         | m   | adult    | eagle               |
+| EXP4   | Bipedal_Tail_Tail_Bipedal                        | f   | adult    | eagle               |
+| EXP6   | Flee up_Go down_Tail                             | m   | subadult | eagle               |
+| EXP8   | Tail_Bipedal_Tail                                | m   | subadult | eagle               |
+| EXP11  | Bipedal_Flee down                                | f   | adult    | eagle               |
+| EXP1   | Approach model                                    | m   | subadult | viper               |
+| EXP15  | Flee straight_Bipedal_Go up_Tail                  | f   | adult    | viper               |
+| EXP2   | Flee up_Go up                                    | f   | adult    | viper               |
+| EXP21  | Flee straight_Tail_Bipedal_Tail_Approach model   | m   | adult    | viper               |
+| EXP22  | Flee up_Tail                                     | m   | subadult | viper               |
+| EXP23  | Flee straight_Tail                                | m   | subadult | viper               |
+| EXP24  | Flee straight_Approach model                       | f   | adult    | viper               |
+| EXP27  | Flee up_Go up                                   | m   | subadult | viper               |
+| EXP5   | Flee straight_Bipedal_Go up                          | f   | subadult | viper               |
+| EXP18  | Flee up_Go down_Bipedal_Go up                    | m   | subadult | viper               |
+| EXP12  | Flee up_Tail_Go up                               | m   | subadult | leopard             |
+| EXP13  | Flee up                                          | m   | adult    | leopard             |
+| EXP16  | Flee up                                          | f   | adult    | leopard             |
+| EXP17  | Flee up                                          | m   | subadult | leopard             |
+| EXP20  | Flee up                                          | m   | adult    | leopard             |
+| EXP25  | Flee up                                          | m   | adult    | leopard             |
+| EXP3   | Flee up                                          | m   | subadult | leopard             |
+| EXP7   | Flee up                                          | f   | adult    | leopard             |
+| EXP9   | Flee up                                          | f   | adult    | leopard             |
+| EXP12  | Flee up_Tail_Go up                               | m   | subadult | leopard             |
+
+
