Update 1. Predator model experiments - behaviour.md

--- a/1. Predator model experiments - behaviour.md
+++ b/1. Predator model experiments - behaviour.md
@@ -1,5 +1,6 @@
 # Predator model experiment - behaviours
 Here we analyse the behavioural responses (all but vocal responses) of sooty mangabeys when presented with realistic models of leopard, eagle and viper (Gaboon and Rhinoceros). 
+We coded and used for analysis all behaviours occurring during the first 30s after model detection by the focal individual.
 
 ### Main findings
 #### Fleeing behaviours
