Update 1. Predator model experiments - behaviour.md

--- a/1. Predator model experiments - behaviour.md
+++ b/1. Predator model experiments - behaviour.md
@@ -292,7 +292,7 @@ ggplot(results_df, aes(x = Context, y = Estimate_Prob, color = Context)) +
   geom_errorbar(aes(ymin = Lower_Prob, ymax = Upper_Prob), width = 0, position = position_dodge(width = 0.5)) +
   geom_hline(yintercept = 0.5, linetype = "dashed", color = "black") +
   ylim(0, 1) +
-  labs(x = "", y = "Probability of fleeing up", color = "Last call") +
+  labs(x = "", y = "Probability of fleeing up") +
   theme_minimal() +
   theme(
     panel.grid.major = element_blank(),  # Remove major grid lines
