Update 1. Predator model experiments - behaviour.md

--- a/1. Predator model experiments - behaviour.md
+++ b/1. Predator model experiments - behaviour.md
@@ -217,6 +217,7 @@ m_flee_dir2_hierarchical <- brm(
   control = list(adapt_delta = 0.99, max_treedepth = 15))
 ```
 We treated context_experiment and id as random effects in the flee direction model because the binary outcome (fleeing up or not) showed large variability across both predator types and individuals.
+Also few observations per predator type, so random effects prevent overfitting.
 
 #### Model summary
 <details>
