Update 2. Predator model experiments - vocal response.md

--- a/2. Predator model experiments - vocal response.md
+++ b/2. Predator model experiments - vocal response.md
@@ -1,1 +1,304 @@
+# Predator model experiment - vocal responses
+Here we analyse the vocal responses of sooty mangabeys when presented with realistic models of leopard, eagle and viper (Gaboon and Rhinoceros). 
+We coded and used for analysis all vocalisations occurring during the first 30s after model detection by the focal individual.
+
+### Data
+Details on dataset processing.
+<details>
+  <summary>Click to expand code</summary>
+  
+```r
+# Dataset
+# select the datafile "mangabey call wide" #NEED TO UPLOAD THE FILE ONCE WITH ONLY RELEVANT COLUMNS
+csvFile <- file.choose()
+
+dm_v  = read.csv(csvFile, header=T)
+
+# Compute the reference time when the predator was seen
+dm_v$time_predator_seen <- dm_v$time_cutoff - 30
+
+# Calibrate start and end times relative to predator exposure
+dm_v$start_time_calibrated <- dm_v$start_time_s_first - dm_v$time_predator_seen
+dm_v$end_time_calibrated <- dm_v$end_time_s_last - dm_v$time_predator_seen
+
+# Create variable call.name.unique2 transforming shrill_hoo_growl and shrill_hoo as 1 and shrill as 0
+dm_v$call.name.unique2 <- ifelse(dm_v$call.name.unique %in% c("shrill_hoo", "shrill_hoo_growl"), 1, 0)
+
+# Count the number of rows (utterances) for each exp_id in the dataset
+total_utt <- dm_v %>%
+  group_by(exp_id) %>%
+  summarise(total_utt = n())
+
+# Merge the total_utt back into the original dataset
+dm_v <- dm_v %>%
+  left_join(total_utt, by = "exp_id")
+ ```
+</details>
+
+### 1. Sample size
+#### Figure. Vocal utterances produced during the first 30s after model detection
+<img src="https://github.com/AuriLF/mgb_predator/blob/main/1.%20plots/vocal%20utterances%20sample%20size.jpeg?raw=true" alt="voc" width="600"/>
+
+## 2. Analyse vocal utterance type vs predator type and time of vocal production
+We used the type of predator as random effect so we don't use one type of predator as baseline.
+
+```r
+# Run model
+m_utt_time_fixed <- brm(
+  formula = call.name.unique2 ~ start_time_calibrated + (1 | context_experiment) + (1 | id),
+  family = bernoulli(),
+  data = dm_v,
+  iter = 8000, 
+  warmup = 2000,  
+  chains = 4,
+  control = list(adapt_delta = 0.95))
+```
+### Model summary
+
+<details>
+  <summary>Click to expand code</summary>
+  
+```r
+# Summary
+summary(m_utt_time_fixed)
+
+  Family: bernoulli 
+  Links: mu = logit 
+Formula: call.name.unique2 ~ start_time_calibrated + (1 | id) + (1 | context_experiment) 
+   Data: dm_v (Number of observations: 97) 
+  Draws: 4 chains, each with iter = 8000; warmup = 2000; thin = 1;
+         total post-warmup draws = 24000
+
+Multilevel Hyperparameters:
+~context_experiment (Number of levels: 3) 
+              Estimate Est.Error l-95% CI u-95% CI Rhat Bulk_ESS Tail_ESS
+sd(Intercept)     1.96      1.17     0.53     4.95 1.00     9767    10789
+
+~id (Number of levels: 16) 
+              Estimate Est.Error l-95% CI u-95% CI Rhat Bulk_ESS Tail_ESS
+sd(Intercept)     1.35      0.67     0.25     2.89 1.00     6452     7088
+
+Regression Coefficients:
+                      Estimate Est.Error l-95% CI u-95% CI Rhat Bulk_ESS Tail_ESS
+Intercept                -2.08      1.30    -4.81     0.41 1.00    11824    11483
+start_time_calibrated     0.14      0.04     0.07     0.23 1.00    28669    16217
+summary(m_utt_time_fixed)
+
+# Inspect model
+plot(m_utt_time_fixed)
+pp_check(m_utt_time_fixed, ndraws = 100)
+ ```
+
+</details>
+
+### Extract results and plot predator type
+
+<details>
+  <summary>Click to expand code</summary>
+  
+```r
+
+# Get posterior summary for the fixed effects model
+posterior_summary_fixed2 <- posterior_summary(m_utt_time_fixed)
+
+# Convert the matrix to a data frame
+posterior_summary_df2 <- as.data.frame(posterior_summary_fixed2)
+
+# Add the row names as a column for easier filtering
+posterior_summary_df2$.row <- rownames(posterior_summary_df2)
+
+# Check the structure of the posterior summary first to get the exact row names
+str(posterior_summary_df2)
+
+# Extract the coefficients with exact row name matching
+leopard_coeff2 <- posterior_summary_df2 %>%
+  filter(.row == "r_context_experiment[leopard,Intercept]") %>%
+  select(Estimate, Q2.5, Q97.5)
+
+eagle_coeff2 <- posterior_summary_df2 %>%
+  filter(.row == "r_context_experiment[eagle,Intercept]") %>%
+  select(Estimate, Q2.5, Q97.5)
+
+viper_coeff2 <- posterior_summary_df2 %>%
+  filter(.row == "r_context_experiment[viper,Intercept]") %>%
+  select(Estimate, Q2.5, Q97.5)
+
+# Check the results to confirm
+print(leopard_intercept2)
+print(eagle_coeff2)
+print(viper_coeff2)
+
+# Combine the results
+combined_results2 <- bind_rows(
+  mutate(eagle_coeff2, Predator = "Eagle"),
+  mutate(leopard_coeff2, Predator = "Leopard"),
+  mutate(viper_coeff2, Predator = "Viper"))
+
+
+# Define the logistic function to convert estimates to probabilities
+logistic <- function(x) {
+  return(1 / (1 + exp(-x)))
+}
+
+# For each predator context, calculate the probability for call 1 and call 0
+# Get posterior distributions for estimates (mean, Q2.5, Q97.5) for each context
+# Leopard
+leopard_mean2 <- leopard_coeff2$Estimate
+leopard_q2.5_2 <- leopard_coeff2$Q2.5
+leopard_q97.5_2 <- leopard_coeff2$Q97.5
+
+# Eagle
+eagle_mean2 <- eagle_coeff2$Estimate 
+eagle_q2.5_2 <- eagle_coeff2$Q2.5
+eagle_q97.5_2 <- eagle_coeff2$Q97.5
+
+# Viper
+viper_mean2 <- viper_coeff2$Estimate  
+viper_q2.5_2 <- viper_coeff2$Q2.5 
+viper_q97.5_2 <- viper_coeff2$Q97.5 
+
+# Calculate the probabilities for call 1 (logistic function)
+prob_eagle_mean2 <- logistic(eagle_mean2)
+prob_leopard_mean2 <- logistic(leopard_mean2)
+prob_viper_mean2 <- logistic(viper_mean2)
+
+# Calculate CIs for call 1 (logistic function)
+prob_eagle_q2.5_2 <- logistic(eagle_q2.5_2)
+prob_eagle_q97.5_2 <- logistic(eagle_q97.5_2)
+
+prob_leopard_q2.5_2 <- logistic(leopard_q2.5_2)
+prob_leopard_q97.5_2 <- logistic(leopard_q97.5_2)
+
+prob_viper_q2.5_2 <- logistic(viper_q2.5_2)
+prob_viper_q97.5_2 <- logistic(viper_q97.5_2)
+
+# For call 0 (1 - probability of call 1)
+prob_eagle_0_mean2 <- 1 - prob_eagle_mean2
+prob_leopard_0_mean2 <- 1 - prob_leopard_mean2
+prob_viper_0_mean2 <- 1 - prob_viper_mean2
+
+prob_eagle_0_q2.5_2 <- 1 - prob_eagle_q97.5_2
+prob_eagle_0_q97.5_2 <- 1 - prob_eagle_q2.5_2
+
+prob_leopard_0_q2.5_2 <- 1 - prob_leopard_q97.5_2
+prob_leopard_0_q97.5_2 <- 1 - prob_leopard_q2.5_2
+
+prob_viper_0_q2.5_2 <- 1 - prob_viper_q97.5_2
+prob_viper_0_q97.5_2 <- 1 - prob_viper_q2.5_2
+
+# Combine the results into a data frame
+result2 <- data.frame(
+  Predator = c("Eagle", "Leopard", "Viper"),
+  Probability_Call1_Mean = c(prob_eagle_mean2, prob_leopard_mean2, prob_viper_mean2),
+  Probability_Call1_Q2.5 = c(prob_eagle_q2.5_2, prob_leopard_q2.5_2, prob_viper_q2.5_2),
+  Probability_Call1_Q97.5 = c(prob_eagle_q97.5_2, prob_leopard_q97.5_2, prob_viper_q97.5_2),
+  Probability_Call0_Mean = c(prob_eagle_0_mean2, prob_leopard_0_mean2, prob_viper_0_mean2),
+  Probability_Call0_Q2.5 = c(prob_eagle_0_q2.5_2, prob_leopard_0_q2.5_2, prob_viper_0_q2.5_2),
+  Probability_Call0_Q97.5 = c(prob_eagle_0_q97.5_2, prob_leopard_0_q97.5_2, prob_viper_0_q97.5_2)
+)
+
+# Print the results
+print(result2)
+
+# Reshape the data into long format for easier plotting
+result_long2 <- result2 %>%
+  pivot_longer(cols = starts_with("Probability"),
+               names_to = c("Call_Type", ".value"),
+               names_pattern = "Probability_(.*)_(.*)") %>%
+  mutate(Call_Type = recode(Call_Type, 
+                            "Call1" = "shrill_hoo", 
+                            "Call0" = "shrill"))
+
+# Custom labels for x-axis 
+custom_labels <- c("Eagle\n22\n7", "Leopard\n48\n8", "Viper\n27\n8")
+
+# Plotting
+ggplot(result_long2, aes(x = Predator, y = Mean, color = Call_Type)) +
+  geom_point(position = position_dodge(width = 0.5), size = 4) +
+  geom_errorbar(aes(ymin = Q2.5, ymax = Q97.5), width = 0, 
+                position = position_dodge(width = 0.5)) +
+  geom_hline(yintercept = 0.5, linetype = "dashed", color = "black") +
+  ylim(0, 1) +
+  labs(x = "", y = "Probability", color = "Utterance type") +
+  theme_minimal() +
+  theme(
+    panel.grid.major = element_blank(),
+    panel.grid.minor = element_blank(),
+    legend.position = "right",
+    text = element_text(size = 14),
+    axis.text = element_text(size = 12),
+    axis.title = element_text(size = 14),
+    legend.text = element_text(size = 12),
+    legend.title = element_text(size = 14),
+    axis.line = element_line(size = 0.5, color = "black")
+  ) +
+  scale_color_manual(values = c("shrill_hoo" = "#08C", "shrill" = "darkred"))+
+  scale_x_discrete(labels = custom_labels)
+ ```
+
+</details>
+
+#### Figure. Probability of producing shrill and shrill_hoo depending on the predator type     
+The bars represent the credible interval at 95% and the point is the mean posterior distribution of the model.
+First number bellow predator type corresponds to the number of trials, and the number below is the number of individuals.
+
+<img src="https://github.com/AuriLF/mgb_predator/blob/main/1.%20plots/prob%20utt.jpeg?raw=true" alt="prob_utt" width="400"/>
+
+Tendency for  leopard response to be mostly shrill_hoo and viper response to be mostly shrills, but with large uncertainty. 
+
+### Extract results and plot time of vocal production 
+
+<details>
+  <summary>Click to expand code</summary>
+  
+```r
+# Step 1: Extract the summary of the fitted model to get coefficients and CI
+model_summary <- summary(m_utt_time_fixed)
+
+# Step 2: Extract the fixed effects coefficients
+fixed_effects <- model_summary$fixed
+
+# Step 3: Extract the start_time_calibrated coefficient and its confidence interval
+start_time_coef <- fixed_effects["start_time_calibrated", ]
+print(start_time_coef)
+
+# Step 4: Ensure start_time_coef is a vector (Example Coefficients)
+start_time_coef <- c(-2.08, 0.14)  # Intercept estimate, Coefficient for start_time 
+
+# Step 5: Create a sequence of start times (e.g., from 0 to 30 seconds)
+time_seq <- seq(0, 30, length.out = 100)
+
+# Step 6: Apply the logistic model to calculate the log-odds for each value in time_seq
+log_odds <- start_time_coef[1] + start_time_coef[2] * time_seq  # Intercept + time effect
+
+# Step 7: Convert log-odds to probabilities using the logistic function
+prob_call_1 <- exp(log_odds) / (1 + exp(log_odds))  # Probability of a call (1)
+prob_call_0 <- 1 - prob_call_1  # Probability of no call (0)
+
+# Step 8: Check lengths of time_seq, prob_call_1, and prob_call_0 to ensure they match
+length(time_seq)  # Should be 100
+length(prob_call_1)  # Should be 100
+length(prob_call_0)  # Should be 100
+
+prob_call_1
+prob_call_0
+
+# Step 9: Plot the probabilities for both call (1) and non-call (0) over time
+plot(time_seq, prob_call_1, type = "l", col = "#08C", 
+     xlab = "Time of vocal production (s)", ylab = "Probability",
+     main = "", ylim = c(0, 1), , lwd = 3)
+lines(time_seq, prob_call_0, col = "darkred", lwd = 3)
+
+# Step 10: Add a legend to distinguish between call and non-call probabilities
+legend("top", legend = c("shrill_hoo", "shrill"),
+       col = c("#08C", "darkred"), lty = 1, lwd = 3)
+```
+
+</details>
+
+#### Figure. Probability of producing shrill and shrill_hoo depending on the time of vocal production after model detection
+
+<img src="https://github.com/AuriLF/mgb_predator/blob/main/1.%20plots/time%20utt.jpeg?raw=true" alt="prob_utt" width="400"/>
+
+shrills are most likely to occur first, followed by shrill_hoos
 
