Update 1. Predator model experiments - behaviour.md

--- a/1. Predator model experiments - behaviour.md
+++ b/1. Predator model experiments - behaviour.md
@@ -139,7 +139,7 @@ print(pairwise_comparisons)
 Point estimate displayed: median 
 HPD interval probability: 0.95 
  ```
-### Visualisation
+### Extract posterior distribution mean and CI for plot
 <details>
   <summary>Click to expand code</summary>
   
@@ -246,7 +246,7 @@ pp_check(m_flee_dir2_hierarchical, ndraws = 100)
  ```
 </details> 
 
-### Visualisation
+### Extract posterior distribution mean and CI for plot
 <details>
   <summary>Click to expand code</summary>
   
