Update 2. Predator model experiments - vocal response.md

--- a/2. Predator model experiments - vocal response.md
+++ b/2. Predator model experiments - vocal response.md
@@ -91,7 +91,7 @@ pp_check(m_utt_time_fixed, ndraws = 100)
 
 </details>
 
-### Extract results and plot predator type
+### Extract posterior mean and CI for plot
 
 <details>
   <summary>Click to expand code</summary>
@@ -246,7 +246,7 @@ First number bellow predator type corresponds to the number of trials, and the n
 
 Tendency for  leopard response to be mostly shrill_hoo and viper response to be mostly shrills, but with large uncertainty. 
 
-### Extract results and plot time of vocal production 
+### Extract posterior mean and CI for plot 
 
 <details>
   <summary>Click to expand code</summary>
