Update 1. Predator model experiments - behaviour.md

--- a/1. Predator model experiments - behaviour.md
+++ b/1. Predator model experiments - behaviour.md
@@ -58,27 +58,26 @@ dm_b2_summary3 <- dm_b2 %>%
  ```
 </details> 
 
-### Table. Number of behaviour occurrences recorded per condition with number of individuals in brackets
-| Condition          | Approach model  | Bipedal | Flee  | Move down | Move up | Tail raise | Yawn |
-|--------------------|-----------------|---------|-------|-----------|---------|------------|------|
-| Eagle (N=8)        | 1 (1)           | 5 (4)   | 5 (5) | 3 (3)     | 1 (1)   | 10 (6)     | 3 (2) |
-| Leopard (N=9)      | 0 (0)           | 0 (0)   | 9 (9) | 0 (0)     | 1 (1)   | 1 (1)      | 0 (0) |
-| Viper (N=10)       | 3 (3)           | 4 (4)   | 9 (9) | 1 (1)     | 5 (5)   | 5 (4)      | 0 (0) |
-|--------------------|-----------------|---------|-------|-----------|---------|------------|------|
-| Total              | 4 (3)           | 9 (8)   | 23 (16)| 4 (4)    | 7 (7)   | 16 (8)     | 3 (2) |
-| Percentage         | 6.1%            | 13.6%   | 34.8% | 6.1%      | 10.6%   | 24.2%      | 4.5% |
+### Table. Number of behaviour occurrences recorded per condition with number of trials in brackets
+| Condition                            | Approach model  | Bipedal | Flee  | Move down | Move up | Tail raise | Yawn |
+|--------------------------------------|-----------------|---------|-------|-----------|---------|------------|------|
+| Eagle (N=8)                          | 1 (1)           | 5 (4)   | 5 (5) | 3 (3)     | 1 (1)   | 10 (6)     | 3 (2) |
+| Leopard (N=9)                        | 0 (0)           | 0 (0)   | 9 (9) | 0 (0)     | 1 (1)   | 1 (1)      | 0 (0) |
+| Viper (N=10)                           | 3 (3)           | 4 (4)   | 9 (9) | 1 (1)     | 5 (5)  | 5 (4)      | 0 (0) |
+| N total behaviour                      | 4 (4)           | 9 (8)   | 23 (23)| 4 (4)    | 7 (7)  | 16 (11)     | 3 (2) |
+| % of trials featuring each behaviour | 14.8%              | 33.3%   | 85.2% | 14.8%    | 25.9%   | 40.7%      | 7.4% |
 
-Fleeing represented 34.8% of total behaviours and was used by the majority of individuals (16/23), making it the most frequent behaviour across all conditions. This was followed by tail raises (24.2%, N = 8 individuals) and bipedalism (13.6%, N = 8 individuals). Other behaviours, such as approaching the model (6.1%) and yawning (4.5%), were less common (see Table). Given the high frequency of fleeing, which likely serves as an escape response, and its occurrence across all conditions, we focus on analysing how it varies depending on the type of predator.
+Fleeing was observed in 85.2% of trials (N = 23), making it the most frequent behaviour across all conditions. This was followed by tail raises (40.7%, N = 11 trials) and bipedalism (33.3%, N = 8 trials). Other behaviours, such as approaching the model, moving up or down (without fleeing) and yawning, were less common (see Table). Given the high frequency of fleeing, which likely serves as an escape response, and its occurrence across all conditions, we focus on analysing how it varies depending on the type of predator.
 
-### Table. Number of flee behaviour occurrences with direction and duration per condition with number of individuals in brackets
+### Table. Number of flee behaviour occurrences with direction and duration per condition with number of trials in brackets
 
 | Condition          | Flee down | Flee straight | Flee up | Flee duration mean(SE) in s |
 |--------------------|-----------|---------------|---------|-----------------------------|
-| Eagle (N=5)        | 2(2)      | 0(0)          | 3(3)    | 3.41(0.93)                  |
-| Leopard (N=9)      | 0(0)      | 0(0)          | 9(9)    | 7.99(1.68)                  |  
-| Viper (N=9)        | 0(0)      | 5(5)          | 4(4)    | 1.55(0.24)                  |
+| Eagle (N=5)        | 2 (2)      | 0 (0)          | 3 (3)    | 3.41 (0.93)                  |
+| Leopard (N=9)      | 0 (0)      | 0 (0)          | 9 (9)    | 7.99 (1.68)                  |  
+| Viper (N=9)        | 0 (0)      | 5 (5)          | 4 (4)    | 1.55 (0.24)                  |
 
- In 17 trials, individuals began either on the ground or less than 50 cm from it, and in the remaining 10 trials, they were between 50 cm and 3 m above the ground. Since individuals on the ground cannot flee down, combining these two directions seemed appropriate for analyses. 
+ In 17 trials, individuals were initially positioned either on the ground or less than 50 cm from it. In the remaining 10 trials, they were positioned between 50 cm and 3 m above the ground. Since individuals on the ground do not have the possibility to flee down, combining these two directions seemed appropriate for analyses. 
 
 ## 2. Analyse flee duration
 ```r
@@ -209,15 +208,13 @@ dm_b2_f_dir <- dm_b2 %>%
       TRUE ~ 0))                    # Any other direction gets 0
 
 # Run model
-m_flee_dir2_hierarchical <- brm(
-  flee_direction2 ~ (1 | context_experiment) + (1 | id),
+m_flee_dir2_fixed <- brm(
+  flee_direction2 ~ context_experiment + (1 | id),
   data = dm_b2_f_dir,
   family = bernoulli(),
   chains = 4, iter = 8000, warmup = 4000,
   control = list(adapt_delta = 0.99, max_treedepth = 15))
 ```
-We treated context_experiment and id as random effects in the flee direction model because the binary outcome (fleeing up or not) showed large variability across both predator types and individuals.
-Also few observations per predator type, so random effects prevent overfitting.
 
 #### Model summary
 <details>
@@ -225,63 +222,106 @@ Also few observations per predator type, so random effects prevent overfitting.
 
 ```r
 # Summary
-summary(m_flee_dir2_hierarchical)
+summary(m_flee_dir2_fixed)
 Multilevel Hyperparameters:
-~context_experiment (Number of levels: 3) 
-              Estimate Est.Error l-95% CI u-95% CI Rhat Bulk_ESS Tail_ESS
-sd(Intercept)     3.38      2.38     0.54     9.40 1.00     7034     6161
-
+Multilevel Hyperparameters:
 ~id (Number of levels: 16) 
               Estimate Est.Error l-95% CI u-95% CI Rhat Bulk_ESS Tail_ESS
-sd(Intercept)     2.50      2.14     0.11     7.89 1.00     4215     6003
+sd(Intercept)     8.94     14.74     0.43    47.25 1.00     1946     1408
 
 Regression Coefficients:
-          Estimate Est.Error l-95% CI u-95% CI Rhat Bulk_ESS Tail_ESS
-Intercept     1.19      1.84    -2.14     5.20 1.00     8037     6588
+                          Estimate Est.Error l-95% CI u-95% CI Rhat Bulk_ESS Tail_ESS
+Intercept                    -2.99     11.27   -29.30     5.70 1.00     2959     1306
+context_experimentleopard    20.03     24.22     2.48    80.38 1.00     2274     1327
+context_experimentviper      -1.52      9.16   -19.25    12.18 1.00     3131     1625
 
 
 # Inspect model
-plot(m_flee_dir2_hierarchical)
-pp_check(m_flee_dir2_hierarchical, ndraws = 100)
+plot(m_flee_dir2_fixed)
+pp_check(m_flee_dir2_fixed, ndraws = 100)
  ```
 </details> 
+
+### Post hoc comparison 
+```r
+# Post hoc comparison 
+emm2 <- emmeans(m_flee_dir2_fixed, ~ context_experiment)
+# Run pairwise comparisons with Bonferroni adjustment
+pairwise_comparisons2 <- pairs(emm2, adjust = "bonferroni")
+# Print the results
+print(pairwise_comparisons2)
+
+ contrast        estimate lower.HPD upper.HPD
+ eagle - leopard   -13.27    -59.54    -0.211
+ eagle - viper       1.21    -13.13    18.108
+ leopard - viper    14.83      1.13    62.456
+```
 
 ### Extract posterior distribution mean and CI for plot
 <details>
   <summary>Click to expand code</summary>
   
 ```r
-# Extract posterior means for each context
-context_effects <- coef(m_flee_dir2_hierarchical)$context_experiment
-str(context_effects)
+# Extract the summary of the model
+model_summary <- summary(m_flee_dir2_fixed)
+
+# View the names of the columns in the fixed effects section
+colnames(model_summary$fixed)
+
+# Check the row names of the fixed effects
+rownames(model_summary$fixed)
+
+# Extract coefficients and credible intervals for fixed effects
+context_effects <- model_summary$fixed
+
+# Extract the intercept (reference category, likely "eagle")
+Intercept_log_odds <- context_effects["Intercept", "Estimate"]
+Intercept_Lower <- context_effects["Intercept", "l-95% CI"]
+Intercept_Upper <- context_effects["Intercept", "u-95% CI"]
+
+# Extract coefficients for other contexts (leopard, viper)
+leopard_log_odds <- context_effects["context_experimentleopard", "Estimate"]
+leopard_Lower <- context_effects["context_experimentleopard", "l-95% CI"]
+leopard_Upper <- context_effects["context_experimentleopard", "u-95% CI"]
+
+viper_log_odds <- context_effects["context_experimentviper", "Estimate"]
+viper_Lower <- context_effects["context_experimentviper", "l-95% CI"]
+viper_Upper <- context_effects["context_experimentviper", "u-95% CI"]
 
 # Convert log-odds to probabilities for each context
-# Initialise an empty data frame to store results
-results_df <- data.frame(Context = character(0), 
-                         Estimate_Prob = numeric(0), 
-                         Lower_Prob = numeric(0), 
-                         Upper_Prob = numeric(0))
+Intercept_Prob <- plogis(Intercept_log_odds)
+Intercept_Lower_Prob <- plogis(Intercept_Lower)
+Intercept_Upper_Prob <- plogis(Intercept_Upper)
 
-# Loop through all contexts (eagle, leopard, viper)
-for (context in dimnames(context_effects)[[1]]) {
-  # Extract log-odds for the context
-  Estimate_log_odds <- context_effects[context, "Estimate", 1]
-  Lower_log_odds <- context_effects[context, "Q2.5", 1]
-  Upper_log_odds <- context_effects[context, "Q97.5", 1]
-  
-  # Convert log-odds to probabilities
-  Estimate_Prob <- plogis(Estimate_log_odds)
-  Lower_Prob <- plogis(Lower_log_odds)
-  Upper_Prob <- plogis(Upper_log_odds)
-  
-  # Append results for the current context to the data frame
-  results_df <- rbind(results_df, data.frame(Context = context, 
-                                             Estimate_Prob = Estimate_Prob, 
-                                             Lower_Prob = Lower_Prob, 
-                                             Upper_Prob = Upper_Prob))
-}
+leopard_Prob <- plogis(leopard_log_odds)
+leopard_Lower_Prob <- plogis(leopard_Lower)
+leopard_Upper_Prob <- plogis(leopard_Upper)
 
-# View the results
+viper_Prob <- plogis(viper_log_odds)
+viper_Lower_Prob <- plogis(viper_Lower)
+viper_Upper_Prob <- plogis(viper_Upper)
+
+# Print the probabilities to check
+print(Intercept_Prob)
+print(Intercept_Lower_Prob)
+print(Intercept_Upper_Prob)
+
+print(leopard_Prob)
+print(leopard_Lower_Prob)
+print(leopard_Upper_Prob)
+
+print(viper_Prob)
+print(viper_Lower_Prob)
+print(viper_Upper_Prob)
+
+# Create the dataframe with the context and probabilities
+results_df <- data.frame(
+  Context = c("eagle", "leopard", "viper"),
+  Estimate_Prob = c(0.0478728, 1.0000000, 0.1795729),
+  Lower_Prob = c(1.875836e-13, 0.9228683, 4.366075e-09),
+  Upper_Prob = c(0.9966688, 1.0000000, 0.9999949))
+
+# Print the results
 print(results_df)
 
 # Custom labels for x-axis 
@@ -309,15 +349,18 @@ ggplot(results_df, aes(x = Context, y = Estimate_Prob, color = Context)) +
   scale_color_manual(values = c("eagle" = "#070707", "leopard" = "orange", "viper" = "#08C45D")) +
   scale_x_discrete(labels = custom_labels) +
   guides(color = "none")
+
  ```
 </details> 
 
 #### Figure. Probability of fleeing up depending on predator type    
 The bars represent the credible interval at 95% and the point is the mean posterior distribution of the model.
 
-<img src="https://github.com/AuriLF/mgb_predator/blob/main/1.%20plots/Flee%20direction2.jpeg" alt="flee_di" width="400"/>
+<img src="https://github.com/AuriLF/mgb_predator/blob/main/1.%20plots/Flee%20direction3.jpeg" alt="flee_di" width="400"/>
 
-We found consistent support that the probability of fleeing upwards was high in the leopard condition (mean probability and 95% CI for fleeing up = 1, 95%-CI[0.71–1.00]). However, in the eagle and viper conditions, we did not find that fleeing upwards was higher than fleeing downwards or straight. For the eagle condition, the mean probability of fleeing upwards was 0.64 (95%-CI [0.05–0.98]), while the mean probability of fleeing downwards/straight was 0.36 (95%-CI [0.02–0.95]). For the viper condition, the mean probability of fleeing upwards was 0.44 (95%-CI [0.03–0.91]), and the mean probability of fleeing downwards/straight was 0.56 (95%-CI [0.09–0.97]).
+
+We found consistent support that the probability of fleeing upwards was high in the leopard condition (mean probability and 95% CI for fleeing up = 1, 95%-CI[0.92–1.00]) compared to eagle and viper (pariwise post-hoc comparisons: eagle vs leopard estimate -13.27, 95%-CI [-59.54–-0.21]; eagle vs viper estimate 1.21, 95%-CI [-13.13–18.11]; leopard vs viper estimate = 14.83, 95%-CI [1.13–62.46]. Eagle and viper conditions did not show significant preferences for one direction (mean probability and 95% CI for fleeing up in eagle = 0.05, 95%-CI[0.00–1.00]; mean probability and 95% CI for fleeing up in viper = 0.18, 95%-CI[0.00–1.00]. 
+
 
 #### Table. Position in the canopy after fleeing depending on predator type
 ```r
@@ -337,25 +380,25 @@ dm_b2 %>%
 #### Table. Sequence of behaviours per trial 
 | exp_id | behaviour_sequence                                | sex | ageclass | context_experiment |
 |--------|---------------------------------------------------|-----|----------|---------------------|
-| EXP10  | Tail_Approach model_Tail_Go up_Tail_Go down      | m   | adult    | eagle               |
-| EXP14  | Flee up_Tail_Yawn_Go down                        | m   | subadult | eagle               |
+| EXP10  | Tail raises_Approach model_Tail raises_Move up_Tail raises_Move down      | m   | adult    | eagle               |
+| EXP14  | Flee up_Tail_Yawn_Move down                        | m   | subadult | eagle               |
 | EXP19  | Bipedal_Flee up                                  | m   | adult    | eagle               |
-| EXP26  | Flee down_Tail_Yawn_Yawn                         | m   | adult    | eagle               |
-| EXP4   | Bipedal_Tail_Tail_Bipedal                        | f   | adult    | eagle               |
-| EXP6   | Flee up_Go down_Tail                             | m   | subadult | eagle               |
-| EXP8   | Tail_Bipedal_Tail                                | m   | subadult | eagle               |
+| EXP26  | Flee down_Tail raises_Yawn_Yawn                         | m   | adult    | eagle               |
+| EXP4   | Bipedal_Tail raises_Tail raises_Bipedal                        | f   | adult    | eagle               |
+| EXP6   | Flee up_Move down_Tail raises                             | m   | subadult | eagle               |
+| EXP8   | Tail raises_Bipedal_Tail raises                                | m   | subadult | eagle               |
 | EXP11  | Bipedal_Flee down                                | f   | adult    | eagle               |
 | EXP1   | Approach model                                    | m   | subadult | viper               |
-| EXP15  | Flee straight_Bipedal_Go up_Tail                  | f   | adult    | viper               |
-| EXP2   | Flee up_Go up                                    | f   | adult    | viper               |
-| EXP21  | Flee straight_Tail_Bipedal_Tail_Approach model   | m   | adult    | viper               |
-| EXP22  | Flee up_Tail                                     | m   | subadult | viper               |
-| EXP23  | Flee straight_Tail                                | m   | subadult | viper               |
+| EXP15  | Flee straight_Bipedal_Move up_Tail raises                 | f   | adult    | viper               |
+| EXP2   | Flee up_Move up                                    | f   | adult    | viper               |
+| EXP21  | Flee straight_Tail raises_Bipedal_Tail raises_Approach model   | m   | adult    | viper               |
+| EXP22  | Flee up_Tail raises                                     | m   | subadult | viper               |
+| EXP23  | Flee straight_Tail raises                               | m   | subadult | viper               |
 | EXP24  | Flee straight_Approach model                       | f   | adult    | viper               |
-| EXP27  | Flee up_Go up                                   | m   | subadult | viper               |
-| EXP5   | Flee straight_Bipedal_Go up                          | f   | subadult | viper               |
-| EXP18  | Flee up_Go down_Bipedal_Go up                    | m   | subadult | viper               |
-| EXP12  | Flee up_Tail_Go up                               | m   | subadult | leopard             |
+| EXP27  | Flee up_Move up                                   | m   | subadult | viper               |
+| EXP5   | Flee straight_Bipedal_Move up                          | f   | subadult | viper               |
+| EXP18  | Flee up_Move down_Bipedal_Move up                    | m   | subadult | viper               |
+| EXP12  | Flee up_Tail raises_Move up                               | m   | subadult | leopard             |
 | EXP13  | Flee up                                          | m   | adult    | leopard             |
 | EXP16  | Flee up                                          | f   | adult    | leopard             |
 | EXP17  | Flee up                                          | m   | subadult | leopard             |
