Update 1. Predator model experiments - behaviour.md

--- a/1. Predator model experiments - behaviour.md
+++ b/1. Predator model experiments - behaviour.md
@@ -81,6 +81,7 @@ Fleeing was observed in 85.2% of trials (N = 23), making it the most frequent be
  In 17 trials, individuals were initially positioned either on the ground or less than 50 cm from it. In the remaining 10 trials, they were positioned between 50 cm and 3 m above the ground. Since individuals on the ground do not have the possibility to flee down, combining these two directions seemed appropriate for analyses. 
 
 ## 2. Analyse flee duration
+### Model
 ```r
 # Only keep flee behaviours
  dm_b2_f_dur <- dm_b2 %>% 
@@ -200,6 +201,7 @@ In the analysis of flee duration, the mean flee duration was shortest in the vip
 The pairwise comparisons showed that flee duration in the leopard condition was significantly longer than in the eagle (estimate = -4.46, 95%-CI [-8.67–-0.68]) and viper (estimate = 6.36, 95%-CI [3.46–9.94]) conditions. In contrast, flee duration in the eagle condition was not significantly different from the viper condition, although there was a tendency towards a longer flee duration in the eagle condition (estimate = 1.85, 95%-CI [-0.30–4.50]).
 
 ## 3. Analyse flee direction
+### Model
 ```r
 # Subset + create variable flee_direction2 to merge direction same (straight) and down into 0 and up into 1
 dm_b2_f_dir <- dm_b2 %>%
