Update 1. Predator model experiments - behaviour.md

--- a/1. Predator model experiments - behaviour.md
+++ b/1. Predator model experiments - behaviour.md
@@ -194,7 +194,7 @@ ggplot() +
 #### Figure. Flee duration in s recorded depending on the type of predator     
 The bars represent the credible interval at 95% and the point is the mean posterior distribution of the model.
 
-<img src="https://github.com/AuriLF/mgb_predator/blob/main/1.%20plots/Flee%20duration.png?raw=true" alt="flee_d" width="400"/>
+<img src="https://github.com/AuriLF/mgb_predator/blob/main/1.%20plots/Flee%20duration2.png?raw=true" alt="flee_d" width="400"/>
 
 In the analysis of flee duration, the mean flee duration was shortest in the viper condition (mean posterior distribution = 1.72, 95%-CI [1.11–2.80]), followed by the eagle condition (mean posterior distribution = 3.59, 95%-CI [2.10–6.86]), and the longest duration was observed in the leopard condition (mean posterior distribution = 8.09, 95%-CI [5.69–12.02]).
 
